--- a/404.md
+++ b/404.md
@@ -6,7 +6,7 @@ indexing: false
 sitemap: false
 ---
 
-Sorry, but the page could not be found.
+Sorry! but this page's kennel must have been left open...
 
 Are you looking for:
 
